--- a/src/app/booking/pages/booking-summary-page/booking-summary-page.component.html
+++ b/src/app/booking/pages/booking-summary-page/booking-summary-page.component.html
@@ -1,25 +1,15 @@
 <div class="wrapper">
   <h1 class="title"><tui-svg src="/assets/icons/preview.svg"></tui-svg> Summary</h1>
   <div class="grid">
-    <div class="card" *ngFor="let flight of booking.flightsData">
-      <div class="card-header">
-        <div class="flight">
-          <span class="flight-number">{{ booking.flightNumber }}</span>
-          <span>{{ flight.departure }} - {{ flight.arrival }}</span>
-        </div>
-        <div class="date">
-          {{ flight | flightsDates }}
-        </div>
-      </div>
-      <div class="card-content" *ngFor="let passenger of booking.passengerData">
-        <div class="passenger">{{ passenger.firstName | uppercase }} {{ passenger.lastName | uppercase }}</div>
-        <div class="baggage">
-          <div *ngIf="passenger.baggageCount">{{ passenger.baggageCount }} checked bag (total 23 kg) included</div>
-          <div *ngIf="passenger.category !== 'infants'">1 cabin bag + 1 personal item (max. 8 kg) included</div>
-          <div *ngIf="passenger.category !== 'infants'">Seat {{ passenger.seat }}</div>
-        </div>
-      </div>
-    </div>
+    <air-summary-flight-card
+      [flight]="booking.flight"
+      [passengerData]="booking.passengerData"
+    ></air-summary-flight-card>
+    <air-summary-flight-card
+      *ngIf="booking.returnFlight"
+      [flight]="booking.returnFlight"
+      [passengerData]="booking.passengerData"
+    ></air-summary-flight-card>
     <div class="payment-wrapper">
       <div class="card">
         <div class="category" *ngFor="let passenger of passengerCategories; index as i">
