--- a/src/app/user/pages/shopping-cart-page/shopping-cart-page.component.html
+++ b/src/app/user/pages/shopping-cart-page/shopping-cart-page.component.html
@@ -1,8 +1,8 @@
 <div class="wrapper">
-  <div class="title">Cart</div>
   <air-bookings-table
     *ngIf="userSettings$ | async as userSettings"
     [bookings]="bookings$ | async"
+    caption="Shopping cart"
     [isEditable]="true"
     [preferredCurrency]="userSettings.currency"
     (removeBooking)="removeBooking($event)"
