fix: pluralize & correctly count baggage in booking-summary-page

--- a/src/app/booking/components/summary-flight-card/summary-flight-card.component.html
+++ b/src/app/booking/components/summary-flight-card/summary-flight-card.component.html
@@ -18,7 +18,10 @@
   <div class="card-content" *ngFor="let passenger of passengerData">
     <div class="passenger">{{ passenger.firstName | uppercase }} {{ passenger.lastName | uppercase }}</div>
     <div class="baggage">
-      <div *ngIf="passenger.baggageCount">{{ passenger.baggageCount }} checked bag (total 23 kg) included</div>
+      <div *ngIf="passenger.baggageCount">
+        {{ passenger.baggageCount }} checked {{ 'bag' | pluralize : passenger.baggageCount }} (total
+        {{ passenger.baggageCount * baggageItemWeight }} kg) included
+      </div>
       <div *ngIf="passenger.category !== 'infants'">1 cabin bag + 1 personal item (max. 8 kg) included</div>
       <div *ngIf="passenger.category !== 'infants'">Seat {{ passenger.seat }}</div>
     </div>
