--- a/src/app/booking/pages/booking-summary-page/booking-summary-page.component.html
+++ b/src/app/booking/pages/booking-summary-page/booking-summary-page.component.html
@@ -3,32 +3,32 @@
   <div class="grid">
     <air-summary-flight-card
       [dateFormat]="dateFormat"
-      [flight]="booking.flight"
-      [passengerData]="booking.passengerData"
+      [flight]="booking?.flight"
+      [passengerData]="booking?.passengerData || []"
     ></air-summary-flight-card>
     <air-summary-flight-card
-      *ngIf="booking.returnFlight"
+      *ngIf="booking?.returnFlight"
       [dateFormat]="dateFormat"
-      [flight]="booking.returnFlight"
-      [passengerData]="booking.passengerData"
+      [flight]="booking?.returnFlight"
+      [passengerData]="booking?.passengerData || []"
     ></air-summary-flight-card>
     <div class="payment-wrapper">
       <div class="card">
-        <div class="category" *ngFor="let passenger of passengerCategories; index as i">
-          <div class="category-wrapper" *ngIf="booking.passengers[passenger]">
+        <div class="category" *ngFor="let category of passengerCategories; index as i">
+          <div class="category-wrapper" *ngIf="this.getCategoryCount(category)">
             <div class="category-title">
-              <span> {{ booking.passengers[passenger] }} x {{ passenger | titlecase }} Fare </span>
+              <span> {{ this.getCategoryCount(category) }} x {{ category | titlecase }} Fare </span>
               <span>
-                {{ getPriceForPassengerCategory(passenger) | currency : preferredCurrency }}
+                {{ getPriceForPassengerCategory(category) | currency : preferredCurrency }}
               </span>
             </div>
             <div class="details">
               <span>Fare</span>
-              <span>{{ getFareForPassengerCategory(passenger) | currency : preferredCurrency }}</span>
+              <span>{{ getFareForPassengerCategory(category) | currency : preferredCurrency }}</span>
             </div>
             <div class="details">
               <span>Tax & Service Charge</span>
-              <span>{{ getTaxForPassengerCategory(passenger) | currency : preferredCurrency }}</span>
+              <span>{{ getTaxForPassengerCategory(category) | currency : preferredCurrency }}</span>
             </div>
           </div>
         </div>
