--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -4,7 +4,7 @@
       <a routerLink="/" class="logo-link">
         <img src="assets/logo.svg" alt="Logo" class="logo" />
       </a>
-      <air-progress-bar *ngIf="showProgressBar"></air-progress-bar>
+      <air-progress-bar *ngIf="showBookingDetails"></air-progress-bar>
       <div class="buttons-wrapper">
         <form class="form" [formGroup]="userSettingsForm">
           <tui-select
@@ -44,22 +44,23 @@
               (click)="logout()"
             ></button>
           </div>
+          <button
+            *ngIf="user"
+            tuiIconButton
+            routerLink="/user/cart"
+            size="m"
+            shape="rounded"
+            type="button"
+            appearance="icon"
+            icon="tuiIconShoppingBag"
+            class="shopping-bag"
+          ></button>
         </ng-container>
-        <button
-          tuiIconButton
-          routerLink="/user/cart"
-          size="m"
-          shape="rounded"
-          type="button"
-          appearance="icon"
-          icon="tuiIconShoppingBag"
-          class="shopping-bag"
-        ></button>
       </div>
     </div>
 
     <ng-container *tuiLet="flightSearchData$ | async as flightSearchData">
-      <div *ngIf="flightSearchData" class="flight-content-wrapper">
+      <div *ngIf="flightSearchData && showBookingDetails" class="flight-content-wrapper">
         <div class="airports">
           <span>{{ flightSearchData.departure.name }}</span>
           <tui-svg src="/assets/icons/plane-directions.svg"></tui-svg>
