fix: use full height of the viewport

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<tui-root>
-  <air-header></air-header>
-  <router-outlet></router-outlet>
-  <air-footer></air-footer>
+<tui-root class="root">
+  <div class="container">
+    <air-header class="header"></air-header>
+    <main class="main">
+      <router-outlet></router-outlet>
+    </main>
+    <air-footer class="footer"></air-footer>
+  </div>
 </tui-root>
