fix: fix styles of form on flight-search page

--- a/src/app/shared/styles/_colors.scss
+++ b/src/app/shared/styles/_colors.scss
@@ -25,4 +25,5 @@ $color-highlight-yellow0: #f1c933;
 $color-highlight-yellow30: rgba(241 201 51 / 30%);
 $color-highlight-green30: rgba(127 137 6 / 30%);
 $color-highlight-red30: rgba(179 38 30 / 30%);
+$color-form-background: rgba(255 255 255 / 85%);
 $highlight-gradient: linear-gradient(108.75deg, #0090bd 59.91%, #073590 95.36%);
