--- a/src/app/flight-search/pages/flight-search-page/flight-search-page.component.scss
+++ b/src/app/flight-search/pages/flight-search-page/flight-search-page.component.scss
@@ -7,6 +7,8 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  border-radius: 8px;
+  background-color: colors.$color-form-background;
 }
 
 .flight-radios {
