--- a/src/app/booking/pages/booking-passengers-page/booking-passengers-page.component.scss
+++ b/src/app/booking/pages/booking-passengers-page/booking-passengers-page.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   padding: 8px;
-  margin: 0 auto;
+  margin: 50px auto 0;
   max-width: 1130px;
   display: flex;
   flex-direction: column;
