fix: increase icon size of shopping card; add aria-label

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -52,7 +52,8 @@
             shape="rounded"
             type="button"
             appearance="icon"
-            icon="tuiIconShoppingBag"
+            icon="tuiIconShoppingBagLarge"
+            aria-label="Shopping cart"
             class="shopping-bag"
           ></button>
         </ng-container>
