--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -7,6 +7,7 @@
 }
 
 .header {
+  width: 100%;
   padding: 1.5rem;
   background: $color-neutral-100;
 }
@@ -17,8 +18,9 @@
 }
 
 .content-wrapper {
-  display: flex;
+  width: 100%;
   max-width: 1130px;
+  display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
@@ -27,7 +29,7 @@
 
 .flight-content-wrapper {
   margin: 0 auto;
-  padding: 22px 0;
+  padding: 22px 0 0;
   display: flex;
   max-width: 1130px;
   justify-content: flex-start;
