--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -18,13 +18,15 @@
 }
 
 .content-wrapper {
+  margin: 0 auto;
   width: 100%;
   max-width: 1130px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  margin: 0 auto;
+  align-items: center;
+  flex-wrap: wrap;
   column-gap: 1.5rem;
+  row-gap: 1rem;
 }
 
 .flight-content-wrapper {
@@ -41,6 +43,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   column-gap: 1rem;
 }
 
