--- a/src/app/booking/components/passenger-contacts/passenger-contacts.component.html
+++ b/src/app/booking/components/passenger-contacts/passenger-contacts.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="form-field">
-      <tui-input formControlName="email">
+      <tui-input class="input-email" formControlName="email">
         Email&nbsp;
         <span class="tui-required"></span>
         <input tuiTextfield placeholder="e.g. example@email.com" type="email" />
