--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -78,6 +78,7 @@
   justify-content: space-between;
   align-items: center;
   column-gap: 2rem;
+  row-gap: 1rem;
 
   @media (width <= 640px) {
     flex-direction: column;
