--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,16 +9,7 @@
 
 .container {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.main {
-  flex: 1 0 auto;
-}
-
-.header,
-.footer {
-  flex: 0 0 auto;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
 }
