--- a/src/app/booking/components/flight-details/flight-details.component.html
+++ b/src/app/booking/components/flight-details/flight-details.component.html
@@ -1,29 +1,31 @@
 <ng-container *ngIf="flight">
   <div class="flight-details" [ngClass]="{ selected: isFlightSelected }">
     <div class="flight-details-left">
-      <air-date-time-widget
-        [isDeparture]="true"
-        [date]="flight.departureDate"
-        [dateFormat]="dateFormat"
-        [airportName]="flight.departureAirport.name"
-      ></air-date-time-widget>
+      <div class="flight-date-duration">
+        <air-date-time-widget
+          [isDeparture]="true"
+          [date]="flight.departureDate"
+          [dateFormat]="dateFormat"
+          [airportName]="flight.departureAirport.name"
+        ></air-date-time-widget>
 
-      <div class="flight-duration">
-        <span class="flight-time">{{ flight.flightDuration | humanReadableTime }}</span>
-        <div class="flight-icon">
-          <span class="flight-icon-line"></span>
-          <tui-svg [src]="getFlightIcon()"></tui-svg>
-          <span class="flight-icon-line"></span>
+        <div class="flight-duration">
+          <span class="flight-time">{{ flight.flightDuration | humanReadableTime }}</span>
+          <div class="flight-icon">
+            <span class="flight-icon-line"></span>
+            <tui-svg [src]="getFlightIcon()"></tui-svg>
+            <span class="flight-icon-line"></span>
+          </div>
+          <span class="flight-connections">{{ flight.connections | flightConnections }}</span>
         </div>
-        <span class="flight-connections">{{ flight.connections | flightConnections }}</span>
-      </div>
 
-      <air-date-time-widget
-        [isDeparture]="false"
-        [date]="flight.arrivalDate"
-        [dateFormat]="dateFormat"
-        [airportName]="flight.arrivalAirport.name"
-      ></air-date-time-widget>
+        <air-date-time-widget
+          [isDeparture]="false"
+          [date]="flight.arrivalDate"
+          [dateFormat]="dateFormat"
+          [airportName]="flight.arrivalAirport.name"
+        ></air-date-time-widget>
+      </div>
 
       <div class="flight-number">
         <span class="flight-number-label">Flight no.</span>
