--- a/src/app/booking/pages/booking-summary-page/booking-summary-page.component.scss
+++ b/src/app/booking/pages/booking-summary-page/booking-summary-page.component.scss
@@ -1,4 +1,5 @@
 @use 'src/app/shared/styles/colors' as *;
+@use 'src/app/shared/styles/typography';
 
 * {
   font-size: 16px;
@@ -6,17 +7,20 @@
 }
 
 .wrapper {
+  margin: 20px auto;
+  padding: 1.5rem;
+  max-width: 1130px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-width: 1130px;
-  margin: 20px auto;
 }
 
 .title {
-  color: $color-primary;
+  @extend %typo-title-large;
+
   display: flex;
   gap: 0.75rem;
+  color: $color-primary;
 }
 
 .flights-wrapper {
@@ -71,5 +75,9 @@
 }
 
 .payment-wrapper {
+  @media (width <= 768px) {
+    grid-column-start: auto;
+  }
+
   grid-column-start: 2;
 }
