--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -4,6 +4,7 @@
 :host {
   position: sticky;
   top: 0;
+  z-index: 100;
 }
 
 .header {
@@ -74,7 +75,13 @@
 .airports {
   @extend %typo-title-xsmall;
 
+  @media screen and (width <= 768px) {
+    font-size: 14px;
+    font-weight: 600;
+  }
+
   display: flex;
+  align-items: center;
   gap: 16px;
   color: $color-neutral-black;
 }
