--- a/src/app/user/components/bookings-table/bookings-table.component.scss
+++ b/src/app/user/components/bookings-table/bookings-table.component.scss
@@ -14,6 +14,14 @@
 }
 
 th {
+  @media screen and (width <= 1200px) {
+    font-size: 16px;
+  }
+
+  @media screen and (width <= 1000px) {
+    font-size: 14px;
+  }
+
   @extend %typo-subtitle-medium;
 
   border: none;
@@ -23,6 +31,14 @@ th {
 }
 
 td {
+  @media screen and (width <= 1200px) {
+    font-size: 16px;
+  }
+
+  @media screen and (width <= 1000px) {
+    font-size: 14px;
+  }
+
   @extend %typo-body-xlarge;
 
   border-top: none;
