--- a/src/app/user/pages/shopping-cart-page/shopping-cart-page.component.html
+++ b/src/app/user/pages/shopping-cart-page/shopping-cart-page.component.html
@@ -9,5 +9,6 @@
     (removeBooking)="removeBooking($event)"
     (editBooking)="editBooking($event)"
     (bookingDetails)="bookingDetails($event)"
+    (checkout)="checkout()"
   ></air-bookings-table>
 </div>
