--- a/src/app/user/components/bookings-table/bookings-table.component.scss
+++ b/src/app/user/components/bookings-table/bookings-table.component.scss
@@ -59,6 +59,12 @@ td {
   }
 }
 
+.table-footer {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 .flight-number {
   color: var(--tui-primary);
   font-weight: 600;
