fix: search form margin

--- a/src/app/flight-search/pages/flight-search-page/flight-search-page.component.scss
+++ b/src/app/flight-search/pages/flight-search-page/flight-search-page.component.scss
@@ -1,7 +1,7 @@
 @use '/src/app/shared/styles/colors';
 
 .form {
-  margin: 65px auto 160px;
+  margin: 65px auto;
   padding: 25px;
   max-width: 600px;
   display: flex;
