feat: add alert after checkout

--- a/src/app/user/pages/shopping-cart-page/shopping-cart-page.component.html
+++ b/src/app/user/pages/shopping-cart-page/shopping-cart-page.component.html
@@ -10,5 +10,6 @@
     (editBooking)="editBooking($event)"
     (bookingDetails)="bookingDetails($event)"
     (checkout)="checkout($event)"
+    (checkoutCompleted)="showCheckoutAlert()"
   ></air-bookings-table>
 </div>
