--- a/src/app/core/pages/not-found-page/not-found-page.component.scss
+++ b/src/app/core/pages/not-found-page/not-found-page.component.scss
@@ -1,8 +1,9 @@
 @use '../../../shared/styles/_colors' as *;
 
 .page-not-found {
-  height: 85vh;
+  height: 100%;
   background-image: url('https://upload.wikimedia.org/wikipedia/commons/1/1c/Astronaut-in-space.jpg');
+  background-position: 50% 20%;
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -14,7 +15,7 @@
   display: flex;
   align-items: center;
   gap: 40%;
-  margin: 0 5vw;
+  margin: 5vw;
   line-height: 1;
 
   @media (width <=1080px) {
